<resources>
    <string name="app_name">GrainHelper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_item">Invoices</string>
    <string name="rCar">Car</string>
    <string name="rId">Id</string>
    <string name="rDate">Date</string>
    <string name="rDriver">Driver</string>
    <string name="rField">Field</string>
    <string name="rCrop">Crop</string>
    <string name="rWarehouse">Warehouse</string>
    <string name="rCreated">Created By</string>
    <string name="rInvoice">Invoice</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sync_center">Sync center</string>
    <string name="about">About</string>
    <string name="sync_centr">Sync center</string>
    <string name="NotRigData">Not right data format</string>
    <string name="DriverNotFound">Driver not found</string>
    <string name="CarNotFound">Car not found</string>
    <string name="DocsLastSync">Docs last sync</string>
    <string name="RefLastSync">Refs last sync</string>
    <string name="NoData">No data</string>
</resources>
